# sf-signal-research

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
research/: config.py  utils.py
research/datasets/: __init__.py  compustat.py  crsp.py  crsp_daily.py  crsp_monthly.py  dataset.py  russell_daily.py
research/strategies/dispersion/: dispersion.ipynb
research/strategies/reversal/: exp_reversal.ipynb  strat_reversal.ipynb  strat_reversal_z.ipynb  testing.ipynb
