[project]
name = "sf-signal-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finance-byu>=0.2.0",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    # used to set up jupyter server
    "notebook",
    # finance-byu uses numba and llvmlite. Due to outdated dependencies, numba requires an older numpy 2.0.x. Letting uv
    # decide so when the time comes that numba updates, it will automatically push numpy up as well.
    "numpy",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pyarrow>=18.0.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
]
[tool.isort]
profile = "black"
known_first_party = ["research"]
known_third_party = ["numpy", "pandas", "matplotlib", "seaborn"]
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
